--- a/styles/style.css
+++ b/styles/style.css
@@ -1,132 +1,123 @@
 .header {
-padding: 92px 50px;
-display: grid;
-grid-template-columns: 1fr 148px 1fr;
-grid-template-rows: auto;
+  padding: 92px 50px 96px 50px;
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  grid-template-rows: auto;
 }
 
+
+/* сделал header и footer максимально похожими на макет. Блок address почему-то отображается у меня в браузере курсивом, поэтому не совпадает с макетом,
+хотя у меня в css прописан font-style, как в макете. */
+
 .header__menu {
- align-self: center;
- font-style: 'Raleway',sans-serif;
- font-weight: 400;
- font-size: 18px;
- line-height: 21.13px;
+  align-self: center;
+  font-style: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.13px;
+  letter-spacing: 1%;
 }
 
 .header__logo-image {
- width: 148px;
- height: 105px;
- display: grid;
+  width: 148px;
+  height: 105px;
+  display: grid;
 }
 
 .header__links-list {
-display:flex;
-flex-direction: row;
-gap: 30px;
-list-style-type: circle;
-    
-    
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  list-style-type: circle;
+  padding-top: 44px;
+  padding-bottom: 40px;
+
 }
 
-
-
 .header__link_active {
-text-decoration: underline;
-text-underline-position: under;
-   
+  text-decoration: underline;
+  text-underline-position: under;
 }
 
 .header__link-main {
-text-decoration: none;
+  text-decoration: none;
 }
 
 .header__links-list-item_no-bullet {
-list-style-type: none;
-text-decoration: none;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .address {
-justify-self: right;
-font-family: 'Raleway', sans-serif;
-font-weight: 400;
-font-size: 18px;
-line-height: 24.3px;
-color: black;
-text-underline-position: under;
-width: 100%;
-max-width: 240px;
-
-    
-}
-
-.address__title {
-justify-self: flex-end;
+  justify-self: right;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+  color: black;
+  text-underline-position: under;
+  width: 100%;
+  max-width: 240px;
+  padding-top: 5px;
+  padding-bottom: 2px;
 }
 
 .cover {
-    background-image: url(../images/cover.jpg);
-    width: 100%;
-    min-height: 757px;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: -1;
-    padding-left: 50px;
-    padding-right: 50px;
-
+  background-image: url(../images/cover.jpg);
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: -1;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .overlay {
-    position: absolute;
-    inset: 0;
-    z-index: 0;
-    background-color: rgba(0, 0, 0, 0.5);
- }
-      
-
- .cover__title {
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-    font-size: 100px;
-    line-height: 115px;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 165px 0px 135px 0px;
-    letter-spacing: 0.3em;
-    position: relative;
-    z-index: 1;
-    gap: 20px;
-    
-    
- }     
-
- .aligned-text {
-    display: block;
-    line-height: 115px;
-    
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
- .aligned-text_center {
-    text-align: center;
-    line-height: 1.4;
-    
-    
- }
+.cover__title {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 115px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 165px 0px 135px 0px;
+  letter-spacing: 0.3em;
+  position: relative;
+  z-index: 1;
+  gap: 20px;
+}
 
- .aligned-text_right {
-text-align: right;
-line-height: 1;
- }
+.aligned-text {
+  display: block;
+  line-height: 115px;
+}
+
+.aligned-text_center {
+  text-align: center;
+  line-height: 1.4;
+}
+
+.aligned-text_right {
+  text-align: right;
+  line-height: 1;
+}
 
 .letter-spacing-extended {
   letter-spacing: 0.6em;
- }
+}
 
 .no-letter-spacing {
   letter-spacing: 0em;
- }
+}
 
- .cover__description {
+.cover__description {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -137,239 +128,227 @@ line-height: 1;
 }
 
 .cover__description-text {
-   font-family:  'Raleway',sans-serif;
-   font-weight: 400;
-   font-size: 22px;
-   line-height: 28px;
-   color: white;
-   margin-left: 28px;
-   width: 637px;
-   word-spacing: 19px;
-   white-space: nowrap;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  color: white;
+  margin-left: 28px;
+  width: 637px;
+  word-spacing: 19px;
+  white-space: nowrap;
 }
 
 .bet-button {
-     all: unset;
-     width: 256px;
-     height: 51px;
-     background-color: transparent;
-     border-width: 1px;
-     border-style: solid;
-     border-color: #fff;
-     font-style:  'Raleway',sans-serif;
-     font-weight: 500;
-     font-size: 22px;
-     text-transform: uppercase;
-     text-align: center;
-     color:#fff;
-     line-height: 25.83px;
-     white-space: nowrap;
-     }
+  all: unset;
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #fff;
+  font-style: "Raleway", sans-serif;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  line-height: 25.83px;
+  white-space: nowrap;
+}
 
-     .lots {
-      width: 1052px;
-      margin: 179px 24px 0px 24px;
-      height: 100%;
-      }
+.lots {
+  width: 1052px;
+  margin: 179px 24px 0px 24px;
+  height: 100%;
+}
 
-     .lots__heading {
-        font-family: 'Raleway',sans-serif;
-        font-weight: 700;
-        font-size: 40px;
-        line-height: 46.96px;
-        color: black;
-        text-transform: uppercase;
-        padding: 0px 891px 27px 40px;
-        }
+.lots__heading {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46.96px;
+  color: black;
+  text-transform: uppercase;
+  padding: 0px 891px 27px 40px;
+}
 
-     .lots__card-list {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 25px;
-        padding-bottom: 30px;
-        list-style-type: none;
-     }
+.lots__card-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  padding-bottom: 30px;
+  list-style-type: none;
+}
 
-     .lots__card-list-item {
-      position: relative;
-      height: 100%;
-     }
+.lots__card-list-item {
+  position: relative;
+  height: 100%;
+}
 
+.card {
+  width: 334px;
+  min-height: 563px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 51px 40px 48px 40px;
+}
 
-     .card {
-        width: 334px;
-        min-height: 563px;
-     }
+.card-link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+}
 
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
 
-     .card-link {
-      display: block;
-      text-decoration: none;
-      height: 100%;
-     }
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
 
-
-     .card_type_book {
-      background-image: url(../images/card-lot-02.jpg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      position: relative;
-      z-index: -1;
-   }
-
-   .card_type_film {
-      background-image: url(../images/card-lot-01.jpg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      position: relative;
-      z-index: -1;
-   }
-
-   .card_type_picture {
-      background-image: url(../images/card-lot-03.jpg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      position: relative;
-      z-index: -1;
-   }
-
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
 
 .card__title {
-      font-family: 'Raleway',sans-serif;
-      font-weight: 700;
-      font-size: 22px;
-      line-height: 26.4px;
-      text-decoration: underline;
-      color: #fff;
-      position: absolute;
-      top: 51px;
-      right: 40px;
-      left: 40px;
-      text-transform: uppercase;
-      z-index: 1;
-   }
-
-     
-     .card__text {
-      font-family: 'Raleway',sans-serif;
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 24px;
-      color: #fff;
-      position: absolute;
-      bottom: 48px;
-      right: 40px;
-      left: 40px;
-      z-index: 1;
-     }
-
-
-
-     .lots__look-more-link {
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 23.48px;
-      font-family: 'Raleway',sans-serif;
-      color: black;
-      white-space: nowrap;
-      padding: 30px 844px 0px 40px;
-      text-underline-position: under;
-   }
-
-
-   .about {
-      padding: 146px 24px 0px 24px;
-      min-height: 595px;
-      width: 1052px;
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      column-gap: 72px;
-      }
-     
-   .about__logo {
-    background-color: black;
-    width: 240px;
-    height: 240px;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 35px;
-    margin-left: 47px;
-    
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 26.4px;
+  text-decoration: underline;
+  color: #fff;
+  text-transform: uppercase;
+  z-index: 1;
 }
- 
+
+.card__text {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  z-index: 1;
+}
+
+.lots__look-more-link {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23.48px;
+  font-family: "Raleway", sans-serif;
+  color: black;
+  white-space: nowrap;
+  margin: 30px auto 0 40px;
+  text-underline-position: under;
+}
+
+.about {
+  padding: 146px 24px 0px 24px;
+
+  width: 1052px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 72px;
+}
+
+.about__logo {
+  background-color: black;
+  width: 240px;
+  height: 240px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  margin-left: 47px;
+}
+
 .about__logo-image {
-   width: 148px;
-   height: 114px;
-   top: 64px;
-   right: 45.52px;
-   bottom: 62px;
-   left: 46.48px;
+  width: 148px;
+  height: 114px;
+  display: flex;
+  justify-content: center;
 }
 
 .about__title {
-   font-family: 'Raleway', sans-serif;
-   font-weight: 700;
-   font-size: 40px;
-   line-height: 46.96px;
-   color: black;
-   text-transform: uppercase;
-   padding-top: 136px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 46.96px;
+  color: black;
+  text-transform: uppercase;
+  padding-top: 136px;
 }
-
-
 
 .about__text {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
+  margin-top: 100px;
+  min-width: 693px;
+}
+
+.footer {
+  padding: 0 50px 88px 50px;;
+  margin-top: 180px;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.footer__address {
+   justify-self: right;
    font-family: 'Raleway', sans-serif;
    font-weight: 400;
-   font-size: 20px;
-   line-height: 24px;
+   font-size: 18px;
+   line-height: 24.3px;
    color: black;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
-   gap: 24px;
-   margin-top: 100px;
-   min-width: 693px;
-}
-
-
+   text-underline-position: under;
+   width: 100%;
+   max-width: 240px;
    
-.footer {
-   padding-left: 50px;
-   padding-right: 50px;
-   padding-bottom: 88px;
-   margin-top: 180px;
-   display: flex;
-   justify-content: space-between;
-   min-height: 98px;
+
 }
+
+
 
 .footer__social-list {
-   display: flex;
-   flex-direction: row;
-   list-style: none;
-   gap: 48px;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 48px;
 }
 
 .footer__social-icon {
-   width: 48px;
-   height: 48px;
+  width: 48px;
+  height: 48px;
 }
 
 .footer__menu-list {
-   list-style: none;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-
 .footer__menu-link {
-   text-decoration: underline;
+  text-decoration: underline;
+  text-align: center;
 }
 
 .footer__menu-link_no-underline {
-   text-decoration: none;
+  text-decoration: none;
 }
