--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,6 @@
   grid-template-rows: auto;
 }
 
-/* сделал header и footer максимально похожими на макет. Блок address почему-то отображается у меня в браузере курсивом, поэтому не совпадает с макетом,
-хотя у меня в css прописан font-style, как в макете. */
 
 .header__menu {
   align-self: center;
@@ -58,6 +56,7 @@
   max-width: 240px;
   padding-top: 5px;
   padding-bottom: 2px;
+  font-style: normal;
 }
 
 .cover {
@@ -316,6 +315,7 @@
   text-underline-position: under;
   width: 100%;
   max-width: 240px;
+  font-style: normal;
 }
 
 .footer__social-list {
@@ -335,6 +335,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-style: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.13px;
+  color:black;
 }
 
 .footer__menu-link {
